added jquery for bootstrap nennotame

--- a/views/layout/bootstrap.jade
+++ b/views/layout/bootstrap.jade
@@ -7,6 +7,7 @@ block append meta
 block scripts
   - cdnjs = "//cdnjs.cloudflare.com/ajax/libs/"
   - list = []
+  - list.push(cdnjs+"jquery/2.1.1/jquery.min.js")
   - list.push(cdnjs+"zepto/1.1.3/zepto.min.js")
   - list.push(cdnjs+"underscore.js/1.6.0/underscore-min.js")
   - list.push('http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
