--- a/views/userHelper.jade
+++ b/views/userHelper.jade
@@ -1,4 +1,6 @@
-- icon = "http://cdn1.www.st-hatena.com/users/"+user.id.slice(0,2)+"/"+user.id+"/profile_s.gif"
+- icon_n = "http://cdn1.www.st-hatena.com/users/"+user.id.slice(0,2)+"/"+user.id+"/profile.gif"
+- icon_s = "http://cdn1.www.st-hatena.com/users/"+user.id.slice(0,2)+"/"+user.id+"/profile_s.gif"
+- icon_l = "http://cdn1.www.st-hatena.com/users/"+user.id.slice(0,2)+"/"+user.id+"/profile_l.gif"
 - first_bookmark = user.profile.first_bookmark
 - time = first_bookmark.timestamp
 - if(time != undefined){
