--- a/views/layout/bootstrap.jade
+++ b/views/layout/bootstrap.jade
@@ -7,8 +7,10 @@ block append meta
 block scripts
   - cdnjs = "//cdnjs.cloudflare.com/ajax/libs/"
   - list = []
-  - list.push(cdnjs+"zepto/1.1.3/zepto.min.js")
+  - list.push(cdnjs+"jquery/2.1.1/jquery.min.js")
   - list.push(cdnjs+"underscore.js/1.6.0/underscore-min.js")
+  - list.push(cdnjs+"underscore.js/1.6.0/underscore-min.js")
+  - list.push(cdnjs+"datatables/1.10.0/jquery.dataTables.min.js")
   - list.push('http://netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js')
   each src in list
       script(src=src, type='text/javascript')
