--- a/views/users.jade
+++ b/views/users.jade
@@ -1,26 +1,38 @@
 extends layout/bootstrap.jade
 mixin user-tr(user)
+  include userHelper
   tr
     td
-      - icon = "http://cdn1.www.st-hatena.com/users/"+user.id.slice(0,2)+"/"+user.id+"/profile_s.gif"
-      img.icon(src=icon)
+      img.icon(src=icon_s)
       span.user-id= user.id
     td= user.profile.bookmark_count
     td= user.profile.favorites_count
     td= user.profile.favorited_count
     td= user.profile.stared_count
-    td= user.profile.first_bookmark.timestamp
+    td= timeStr
 block body
   include navbar
   div.container
-    table.table.table-striped.user-list
-      thead
-        th ID
-        th ブックマーク数
-        th お気に入り数
-        th お気に入られ数
-        th 累計はてなスター数
-        th はてブ利用開始日
-      tbody
-        each user in users
-          mixin user-tr(user)
+    div.table-responsive
+      table.table.table-striped#user-list-table
+        thead
+          th ID
+          th ブックマーク数
+          th お気に入り数
+          th お気に入られ数
+          th 累計はてなスター数
+          th はてブ利用開始日
+        tbody
+          each user in users
+            mixin user-tr(user)
+block append scripts
+  script(type="text/javascript").
+    $('table#user-list-table').dataTable({
+      bAutoWidth: false,
+      bLengthChange: false,
+      bPaginate: false,
+    });
+
+
+
+
