/views/scriptsにスクリプトをまとめる

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,7 @@
 extends ./layout/base.jade
-
 block body
   h1 Hatebu.me
 
 block append scripts
   script(type="text/javascript")
-      include index_script
+    include scripts/index.js
