--- a/views/visualize.jade
+++ b/views/visualize.jade
@@ -6,4 +6,4 @@ block body
 block append scripts
   script(src='http://d3js.org/d3.v3.min.js')
   script(type='text/javascript')
-    include visualize_script
+    include:coffeescript scripts/visualize.coffee
