--- a/views/user.jade
+++ b/views/user.jade
@@ -47,5 +47,5 @@ block body
             h3
               a(href=first_bookmark.entry_link)
                 span.title= first_bookmark.entry_title
-              span.comment= first_bookmark.comment
+              p.comment= first_bookmark.comment
     h1.row.hatebu-friends
