はてなキーワードのコサイン類似度測る

--- a/views/user.jade
+++ b/views/user.jade
@@ -47,6 +47,9 @@ block body
             div.list-group-item
               h4.list-group-item-heading よく使うタグ
               p.list-group-item-text ...
+            div.list-group-item
+              h4.list-group-item-heading 似てるユーザー
+              p.list-group-item= user.profile.good_users[0]
       div.col-sm-5
         div.panel.panel-info.first-bookmark
           div.panel-heading
