user pageのヘッダーをトップと同じくらいにする

--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -1,3 +1,4 @@
 
 nav.navbar.navbar-static-top.navbar-inverse(role="navigation")
-  a.navbar-brand(href="/") はてブオフ会
+  a.navbar-brand(href="/")
+    img(src="/static/img/hatebuoff_png.png", width="157", height="26")
