はてブしてください

--- a/views/layout/base.jade
+++ b/views/layout/base.jade
@@ -4,7 +4,7 @@ html(lang="ja", prefix="og: http://ogp.me/ns# fb: http://www.facebook.com/2008/f
     title Hatebu.me
     block meta
       meta(charset="utf-8")
-      meta(name="description", content="はてブまだしないで")
+      meta(name="description", content="はてブしてください")
     block style
       style(type="text/css").
         html,body,div {margin:0px;padding:0px;}
