--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -10,7 +10,7 @@ nav.navbar.navbar-static-top.navbar-inverse(role="navigation")
     li.destroy
       a(href="javascript:destroy();") スペースをこわす
     li
-      a(href="users") 参加者一覧
+      a(href="/users") 参加者一覧
     li
       a.icon
         <img src="http://cdn.www.st-hatena.com/images/header/usermenu-wh.png" alt="利用中のサービス">
